--- a/index.html
+++ b/index.html
@@ -1,154 +1,147 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trình xem GLB - Đã sửa điều khiển</title>
-
-    <style>
-        body { margin: 0; overflow: hidden; }
-        canvas { display: block; }
-        #info {
-            position: absolute;
-            top: 10px;
-            width: 100%;
-            text-align: center;
-            color: white;
-            font-family: Arial, sans-serif;
-            font-size: 16px;
-            text-shadow: 2px 2px 4px #000000;
-            z-index: 10;
-        }
-    </style>
+<meta charset="UTF-8" />
+<title>FPS Viewer - One File</title>
+<style>
+html, body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background: #333;
+}
+canvas {
+    display: block;
+    width: 100vw;
+    height: 100vh;
+}
+#info {
+    position: fixed;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: white;
+    background: rgba(0,0,0,0.6);
+    padding: 8px 14px;
+    border-radius: 6px;
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    z-index: 10;
+}
+</style>
 </head>
 <body>
-    <div id="info">
-        W/A/S/D: Di chuyển | Q: Xuống | E: Lên | Dí chuột PHẢI để quay
-    </div>
 
-    <canvas id="webgl-canvas"></canvas>
+<div id="info">
+Click để vào chế độ FPS — WASD: di chuyển | Q/E: lên xuống | ESC: thoát
+</div>
 
-    <script type="importmap">
-    {
-        "imports": {
-            "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
-            "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/"
-        }
+<canvas id="c"></canvas>
+
+<!-- THREE.JS CDN (NON-MODULE) -->
+<script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
+<script src="https://unpkg.com/three@0.160.0/examples/js/controls/PointerLockControls.js"></script>
+<script src="https://unpkg.com/three@0.160.0/examples/js/loaders/GLTFLoader.js"></script>
+
+<script>
+/* ===== BASIC SETUP ===== */
+const canvas = document.getElementById('c');
+const info = document.getElementById('info');
+
+const scene = new THREE.Scene();
+scene.background = new THREE.Color(0x333333);
+
+const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+camera.position.set(0, 2, 5);
+
+const renderer = new THREE.WebGLRenderer({ canvas, antialias: true });
+renderer.setSize(window.innerWidth, window.innerHeight);
+renderer.setPixelRatio(window.devicePixelRatio);
+
+/* ===== LIGHT ===== */
+scene.add(new THREE.AmbientLight(0xffffff, 0.6));
+const dir = new THREE.DirectionalLight(0xffffff, 1.4);
+dir.position.set(5, 10, 5);
+scene.add(dir);
+scene.add(new THREE.GridHelper(50, 50));
+
+/* ===== FPS CONTROLS ===== */
+const controls = new THREE.PointerLockControls(camera, document.body);
+
+canvas.addEventListener('click', () => {
+    controls.lock();
+});
+
+document.addEventListener('pointerlockchange', () => {
+    info.innerText = document.pointerLockElement
+        ? "FPS MODE — WASD | Q/E | ESC"
+        : "Click để vào chế độ FPS — WASD | Q/E";
+});
+
+/* ===== MOVEMENT (SMOOTH FPS) ===== */
+const keys = {};
+document.addEventListener('keydown', e => keys[e.code] = true);
+document.addEventListener('keyup', e => keys[e.code] = false);
+
+const velocity = new THREE.Vector3();
+const SPEED = 6;
+const ACCEL = 20;
+const DAMP = 8;
+
+const clock = new THREE.Clock();
+
+/* ===== LOAD MODEL (GLB) ===== */
+const loader = new THREE.GLTFLoader();
+loader.load(
+    "https://cdn.jsdelivr.net/gh/DUYHOCIT/Phong302@main/phong302.glb",
+    gltf => {
+        const model = gltf.scene;
+        const box = new THREE.Box3().setFromObject(model);
+        const center = box.getCenter(new THREE.Vector3());
+        model.position.sub(center);
+        scene.add(model);
+        info.innerText = "Tải xong — Click để vào FPS";
+    },
+    xhr => {
+        if (xhr.total)
+            info.innerText = "Đang tải " + Math.round(xhr.loaded / xhr.total * 100) + "%";
+    },
+    err => {
+        console.error(err);
+        info.innerText = "Lỗi tải model (xem Console)";
     }
-    </script>
+);
 
-    <script type="module">
-        import * as THREE from 'three';
-        import { FlyControls } from 'three/addons/controls/FlyControls.js'; // Vẫn dùng FlyControls
-        import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
+/* ===== LOOP ===== */
+function animate() {
+    requestAnimationFrame(animate);
+    const dt = Math.min(0.05, clock.getDelta());
 
-        // 1. Cài đặt cơ bản (Như cũ)
-        const canvas = document.getElementById('webgl-canvas');
-        const infoElement = document.getElementById('info');
-        const scene = new THREE.Scene();
-        scene.background = new THREE.Color(0x333333);
-        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera.position.set(0, 2, 5);
-        const renderer = new THREE.WebGLRenderer({ canvas: canvas, antialias: true });
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        renderer.setPixelRatio(window.devicePixelRatio);
-        renderer.outputColorSpace = THREE.SRGBColorSpace;
+    const dir = new THREE.Vector3(
+        (keys.KeyD ? 1 : 0) - (keys.KeyA ? 1 : 0),
+        (keys.KeyE ? 1 : 0) - (keys.KeyQ ? 1 : 0),
+        (keys.KeyS ? 1 : 0) - (keys.KeyW ? 1 : 0)
+    );
 
-        // 2. Ánh sáng (Như cũ)
-        const ambientLight = new THREE.AmbientLight(0xffffff, 0.5); 
-        scene.add(ambientLight);
-        const directionalLight = new THREE.DirectionalLight(0xffffff, 2.5); 
-        directionalLight.position.set(3, 10, 5);
-        scene.add(directionalLight);
-        const gridHelper = new THREE.GridHelper(50, 50);
-        scene.add(gridHelper);
+    if (dir.lengthSq() > 0) dir.normalize().multiplyScalar(SPEED);
+    dir.applyQuaternion(camera.quaternion);
 
-        // 3. TÙY CHỈNH ĐIỀU KHIỂN (PHẦN QUAN TRỌNG)
-        const controls = new FlyControls(camera, renderer.domElement);
-        controls.movementSpeed = 3.0;
-        
-        // --- SỬA LỖI 1: Tắt "đổ cam" (Roll) ---
-        controls.rollSpeed = 0; 
-        // ----------------------------------------
+    velocity.lerp(dir, ACCEL * dt);
+    velocity.multiplyScalar(1 - DAMP * dt);
 
-        // --- SỬA LỖI 3: Đổi phím E/Q ---
-        // Xóa phím R (lên) và F (xuống) mặc định
-        delete controls.keys['KeyR'];
-        delete controls.keys['KeyF'];
-        // Thêm phím E (lên) và Q (xuống)
-        controls.keys['KeyE'] = 2; // 2 = 'up'
-        controls.keys['KeyQ'] = 3; // 3 = 'down'
-        // ---------------------------------
+    camera.position.addScaledVector(velocity, dt);
 
-        // --- SỬA LỖI 2: Chỉ dí chuột phải mới quay ---
-        // Tắt tính năng 'dí chuột' mặc định (là chuột trái)
-        controls.dragToLook = false; 
+    renderer.render(scene, camera);
+}
+animate();
 
-        // Ngăn menu chuột phải hiện lên khi nhấn
-        renderer.domElement.addEventListener('contextmenu', (event) => {
-            event.preventDefault();
-        });
+/* ===== RESIZE ===== */
+window.addEventListener('resize', () => {
+    camera.aspect = window.innerWidth / window.innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+});
+</script>
 
-        // Khi nhấn chuột
-        renderer.domElement.addEventListener('mousedown', (event) => {
-            // Nếu là chuột phải (button == 2)
-            if (event.button === 2) {
-                // Bật tạm thời tính năng 'dí chuột'
-                controls.dragToLook = true;
-                // Cập nhật lại trạng thái (quan trọng)
-                controls.mousedown(event);
-            }
-        });
-
-        // Khi thả chuột
-        renderer.domElement.addEventListener('mouseup', (event) => {
-            // Nếu là chuột phải (button == 2)
-            if (event.button === 2) {
-                // Tắt lại tính năng 'dí chuột'
-                controls.dragToLook = false;
-                // Cập nhật lại trạng thái (quan trọng)
-                controls.mouseup(event);
-            }
-        });
-        // ----------------------------------------
-        
-        // 4. Tải mô hình (Dùng link jsDelivr cho ổn định)
-        const loader = new GLTFLoader();
-        const modelURL = "https://cdn.jsdelivr.net/gh/DUYHOCIT/Phong302@main/phong302.glb"; 
-
-        loader.load(modelURL, (gltf) => {
-            const object = gltf.scene;
-            const box = new THREE.Box3().setFromObject(object);
-            const center = box.getCenter(new THREE.Vector3());
-            object.position.sub(center);
-            scene.add(object);
-            infoElement.innerText = "Tải thành công! W/A/S/D | Q/E | Dí chuột PHẢI";
-        }, (xhr) => {
-            const percent = (xhr.loaded / xhr.total * 100).toFixed(0);
-            infoElement.innerText = `Đang tải mô hình... ${percent}%`;
-        }, (error) => {
-            console.error("LỖI KHI TẢI FILE GLB:", error);
-            infoElement.innerText = "LỖI: Không thể tải mô hình. Kiểm tra Console (F12).";
-        });
-
-        // 5. Vòng lặp Animation
-        const clock = new THREE.Clock();
-        function animate() {
-            requestAnimationFrame(animate);
-            const delta = clock.getDelta();
-            controls.update(delta); // Cập nhật điều khiển
-            renderer.render(scene, camera);
-        }
-
-        // 6. Xử lý khi thay đổi kích thước cửa sổ
-        window.addEventListener('resize', () => {
-            camera.aspect = window.innerWidth / window.innerHeight;
-            camera.updateProjectionMatrix();
-            renderer.setSize(window.innerWidth, window.innerHeight);
-        });
-
-        // Bắt đầu!
-        animate();
-    </script>
 </body>
 </html>
