--- a/index.html
+++ b/index.html
@@ -44,41 +44,55 @@ Click để vào chế độ FPS — WASD: di chuyển | Q/E: lên xuống | ESC
 <script src="https://unpkg.com/three@0.160.0/examples/js/loaders/GLTFLoader.js"></script>
 
 <script>
-/* ===== BASIC SETUP ===== */
+/* ===== DEBUG-FRIENDLY FPS VIEWER (one-file) ===== */
 const canvas = document.getElementById('c');
 const info = document.getElementById('info');
+
+/* WebGL availability check */
+if (!window.WebGLRenderingContext) {
+    info.innerText = "Trình duyệt/cạc đồ họa không hỗ trợ WebGL.";
+    throw new Error("NO_WEBGL");
+}
 
 const scene = new THREE.Scene();
 scene.background = new THREE.Color(0x333333);
 
 const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-camera.position.set(0, 2, 5);
+// đặt xa hơn một chút để tránh lọt vào trong model
+camera.position.set(0, 2, 8);
 
 const renderer = new THREE.WebGLRenderer({ canvas, antialias: true });
 renderer.setSize(window.innerWidth, window.innerHeight);
 renderer.setPixelRatio(window.devicePixelRatio);
+// đảm bảo clear color khớp background (tránh thấy đen nếu scene.background không được áp dụng)
+renderer.setClearColor(0x333333);
 
-/* ===== LIGHT ===== */
+/* LIGHT */
 scene.add(new THREE.AmbientLight(0xffffff, 0.6));
 const dir = new THREE.DirectionalLight(0xffffff, 1.4);
 dir.position.set(5, 10, 5);
 scene.add(dir);
 scene.add(new THREE.GridHelper(50, 50));
 
-/* ===== FPS CONTROLS ===== */
+// thêm axes helper và 1 hộp debug để chắc chắn renderer đang hoạt động
+const axes = new THREE.AxesHelper(2);
+scene.add(axes);
+
+const debugBox = new THREE.Mesh(
+    new THREE.BoxGeometry(1,1,1),
+    new THREE.MeshStandardMaterial({ color: 0x8888ff, metalness: 0.2, roughness: 0.7 })
+);
+debugBox.position.set(0, 0.5, 0);
+scene.add(debugBox);
+
+/* PointerLock (FPS) */
 const controls = new THREE.PointerLockControls(camera, document.body);
-
-canvas.addEventListener('click', () => {
-    controls.lock();
-});
-
+canvas.addEventListener('click', () => controls.lock());
 document.addEventListener('pointerlockchange', () => {
-    info.innerText = document.pointerLockElement
-        ? "FPS MODE — WASD | Q/E | ESC"
-        : "Click để vào chế độ FPS — WASD | Q/E";
+    info.innerText = document.pointerLockElement ? "FPS MODE — WASD | Q/E | ESC" : "Click để vào chế độ FPS — WASD | Q/E";
 });
 
-/* ===== MOVEMENT (SMOOTH FPS) ===== */
+/* MOVEMENT */
 const keys = {};
 document.addEventListener('keydown', e => keys[e.code] = true);
 document.addEventListener('keyup', e => keys[e.code] = false);
@@ -87,36 +101,55 @@ const velocity = new THREE.Vector3();
 const SPEED = 6;
 const ACCEL = 20;
 const DAMP = 8;
-
 const clock = new THREE.Clock();
 
-/* ===== LOAD MODEL (GLB) ===== */
+/* GLTF loader with safety: if load fails or model is huge, we keep debug objects visible.
+   Also recenters model so camera không rơi vào trong. */
 const loader = new THREE.GLTFLoader();
+const modelURL = "https://cdn.jsdelivr.net/gh/DUYHOCIT/Phong302@main/phong302.glb";
+
+let modelLoaded = false;
 loader.load(
-    "https://cdn.jsdelivr.net/gh/DUYHOCIT/Phong302@main/phong302.glb",
+    modelURL,
     gltf => {
         const model = gltf.scene;
+        // compute bounding box & scale down if quá lớn
         const box = new THREE.Box3().setFromObject(model);
+        const size = box.getSize(new THREE.Vector3()).length();
         const center = box.getCenter(new THREE.Vector3());
+
+        // nếu model quá lớn, scale xuống
+        if (size > 20) {
+            const scale = 10 / size;
+            model.scale.setScalar(scale);
+        }
+
+        // recentre model
         model.position.sub(center);
         scene.add(model);
-        info.innerText = "Tải xong — Click để vào FPS";
+        modelLoaded = true;
+        info.innerText = "Model tải xong — Click để vào FPS";
+        // push camera lùi ra nếu bounding box quá lớn
+        const newBox = new THREE.Box3().setFromObject(model);
+        const newSize = newBox.getSize(new THREE.Vector3()).length();
+        if (newSize > 6) camera.position.set(0, Math.max(2, newSize/4), newSize/1.8);
     },
     xhr => {
-        if (xhr.total)
-            info.innerText = "Đang tải " + Math.round(xhr.loaded / xhr.total * 100) + "%";
+        if (xhr.total) info.innerText = "Đang tải model: " + Math.round(xhr.loaded / xhr.total * 100) + "%";
     },
     err => {
-        console.error(err);
-        info.innerText = "Lỗi tải model (xem Console)";
+        console.error("GLTF LOAD ERROR:", err);
+        info.innerText = "Lỗi tải model — kiểm tra Console (F12). Vẫn hiển thị debug box.";
+        // giữ debug box để bạn biết renderer đang hoạt động
     }
 );
 
-/* ===== LOOP ===== */
+/* RENDER LOOP */
 function animate() {
     requestAnimationFrame(animate);
     const dt = Math.min(0.05, clock.getDelta());
 
+    // movement input local to camera
     const dir = new THREE.Vector3(
         (keys.KeyD ? 1 : 0) - (keys.KeyA ? 1 : 0),
         (keys.KeyE ? 1 : 0) - (keys.KeyQ ? 1 : 0),
@@ -126,6 +159,7 @@ function animate() {
     if (dir.lengthSq() > 0) dir.normalize().multiplyScalar(SPEED);
     dir.applyQuaternion(camera.quaternion);
 
+    // velocity smoothing
     velocity.lerp(dir, ACCEL * dt);
     velocity.multiplyScalar(1 - DAMP * dt);
 
@@ -135,13 +169,23 @@ function animate() {
 }
 animate();
 
-/* ===== RESIZE ===== */
+/* RESIZE */
 window.addEventListener('resize', () => {
-    camera.aspect = window.innerWidth / window.innerHeight;
+    camera.aspect = window.innerWidth/window.innerHeight;
     camera.updateProjectionMatrix();
     renderer.setSize(window.innerWidth, window.innerHeight);
 });
+
+/* DEBUG HELPERS - quick ways to test if "đen" do model/camera:
+   1) Nhấn `M` sẽ tắt/bật model debug box để xem có khác biệt.
+   2) Nhấn `R` để reset camera ra xa.
+*/
+document.addEventListener('keydown', (e) => {
+    if (e.code === 'KeyM') debugBox.visible = !debugBox.visible;
+    if (e.code === 'KeyR') camera.position.set(0,2,8);
+});
 </script>
+
 
 </body>
 </html>
